Added all two methods to the same notebook. ROI selected via an edited version of Ryan's selected method and datapoints are split by a diagonal line. Converted to using BoundingBox class instead of handling coordinates directly. Added labels to output.

--- a/utilities/conversion/apply_homography_to_labels.ipynb
+++ b/utilities/conversion/apply_homography_to_labels.ipynb
@@ -354,7 +354,9 @@
     "    # You only need to do this drawing if we are intentionally being visual\n",
     "    if show_images:\n",
     "        # Draw bounding boxes on the image\n",
-    "        generate_color = lambda: \"#%06x\" % random.randint(0, 0xFFFFFF)\n",
+    "        def generate_color():\n",
+    "            return \"#%06x\" % random.randint(0, 0xFFFFFF)\n",
+    "\n",
     "        draw = ImageDraw.Draw(pil_img)\n",
     "\n",
     "        for bounding_box in remapped_locations:\n",
