Updated first cell of notebook

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "# Clustering Experiment\n",
     "\n",
-    "#### By: Hannah Valenty and Charbel Marche\n",
+    "We have put all of our methods together for direct comparison in a single notebook.\n",
     "\n",
-    "We decided to individually tackle the problem using 1 method, and by the time we are all done we will be able to merge our techniques and select the optimal techinque. Currently we are determining only the indiviudal digits, but we need to recognize these as coherent numbers and be able to assign entries to numbers.\n"
+    "Problem: Currently we are determining only the indiviudal digits, but we need to recognize these as coherent numbers and be able to assign entries to numbers.\n",
+    "\n"
    ]
   },
   {
