Updated dbscan parameters

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,12 +398,12 @@
     "    bounding_boxes: List[BoundingBox], defined_eps: float, min_samples: int\n",
     ") -> List[int]:\n",
     "    \"\"\"\n",
-    "    Cluster bounding boxes using Ward hierarchical clustering algorithm with linkage distance.\n",
+    "    Cluster bounding boxes density based spatial clustering algorithm.\n",
     "\n",
     "    Args:\n",
     "        bounding_boxes: List of bounding boxes.\n",
-    "        defined_eps: The maximum distance between two samples for one to be considered as in the neighborhood of the other.\n",
-    "        min_samples: The number of samples (or total weight) in a neighborhood for a point to be considered as a core point.\n",
+    "        defined_eps: Maximum distance between two samples to be in the neighborhood of one another (center of BB).\n",
+    "        min_samples: The number of samples (or total weight) for a point to be considered as core\n",
     "\n",
     "    Returns:\n",
     "        List of cluster labels.\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -547,119 +547,119 @@
      "output_type": "stream",
      "text": [
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0001_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
       "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
       "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
       "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
       "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
       "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
       "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
       "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
       "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
       "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
       "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
       "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
       "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
       "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
       "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
       "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
       "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
       "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0019_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n",
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0001_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
       "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
       "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
       "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
       "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
       "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
       "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
       "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
       "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
       "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
       "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
       "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
       "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
       "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
       "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
       "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
       "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
       "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0019_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n",
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0001_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
       "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
       "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
       "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
       "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
       "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
       "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
       "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
       "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
       "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
       "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
       "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
       "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
       "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
       "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
       "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
       "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
       "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images/RC_0019_intraoperative.JPG\n"
+      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n"
      ]
     }
    ],
@@ -690,10 +690,10 @@
     "                number_labels = cluster_kmeans(number_bounding_boxes, [18, 19, 20])\n",
     "            elif method == \"dbscan\":\n",
     "                time_labels = dbscan_clustering(\n",
-    "                    time_bounding_boxes, defined_eps=0.01, min_samples=1\n",
+    "                    time_bounding_boxes, defined_eps=5, min_samples=1\n",
     "                )\n",
     "                number_labels = dbscan_clustering(\n",
-    "                    number_bounding_boxes, defined_eps=0.01, min_samples=2\n",
+    "                    number_bounding_boxes, defined_eps=5, min_samples=2\n",
     "                )\n",
     "            elif method == \"agglomerative\":\n",
     "                time_labels = agglomerative_clustering(time_bounding_boxes, [40,41,42])\n",
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -821,8 +821,8 @@
       "Time labels: 797 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
       "Number labels: 380 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
       "Method: dbscan\n",
-      "Time labels: 152 correct clusters, 1291 incorrect clusters. The accuracy is 10.53%\n",
-      "Number labels: 0 correct clusters, 19 incorrect clusters. The accuracy is 0.00%\n",
+      "Time labels: 797 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
+      "Number labels: 380 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
       "Method: agglomerative\n",
       "Time labels: 797 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
       "Number labels: 380 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n"
@@ -919,7 +919,7 @@
     "        ]\n",
     "\n",
     "        # Load JSON\n",
-    "        with open(os.path.join(TIME_JSON, f\"{sheet.split(\".\")[0]}.json\")) as f:\n",
+    "        with open(os.path.join(TIME_JSON, f\"{sheet.split('.')[0]}.json\")) as f:\n",
     "            time_clusters = json.load(f)\n",
     "\n",
     "        # Each cluster contains the number (integer) that the cluster represents\n",
@@ -937,7 +937,7 @@
     "                time_correct_clusters_count += 1\n",
     "\n",
     "        # Load JSON\n",
-    "        with open(os.path.join(NUMBER_JSON, f\"{sheet.split(\".\")[0]}.json\")) as f:\n",
+    "        with open(os.path.join(NUMBER_JSON, f\"{sheet.split('.')[0]}.json\")) as f:\n",
     "            number_clusters = json.load(f)\n",
     "\n",
     "        # Each cluster contains the number (integer) that the cluster represents\n",
@@ -978,7 +978,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ChartExtractor",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -992,7 +992,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
