Added 5% erroneous test with ROI bounds

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,7 @@
     "from sklearn.cluster import KMeans, DBSCAN, AgglomerativeClustering\n",
     "from sklearn.metrics import silhouette_score\n",
     "from scipy.stats import gaussian_kde\n",
+    "import random\n",
     "\n",
     "# Local libraries\n",
     "from utils.annotations import BoundingBox"
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,12 +675,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Function to generate random Bounding Box formatted occurances."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_time_generate(x):\n",
+    "    # erroneous bounding boxes for time ROI\n",
+    "    category_int = random.randint(0, 9)\n",
+    "    left_int = random.randint(105, 720)\n",
+    "\n",
+    "    # slope and random points ABOVE the line (but coordinates flipped)\n",
+    "    slope, intercept = 1/3, 225\n",
+    "    top_int = random.uniform(225, slope*left_int + intercept)\n",
+    "\n",
+    "    # input generated integers to bounding box \n",
+    "    box = BoundingBox(category=f'{category_int}', left=left_int, top=top_int, right=left_int+4, bottom=top_int+6)\n",
+    "    return box\n",
+    "\n",
+    "def random_number_generate(x):\n",
+    "    # erroneous bounding boxes for number ROI\n",
+    "    category_int = random.randint(0, 9)\n",
+    "    left_int = random.randint(105, 720)\n",
+    "    \n",
+    "    # slope and random points BELOW the line (but coordinates flipped)\n",
+    "    slope, intercept = 1/3, 225\n",
+    "    top_int = random.uniform(slope*left_int + intercept, 430)\n",
+    "\n",
+    "    # input generated integers to bounding box \n",
+    "    box = BoundingBox(category=f'{category_int}', left=left_int, top=top_int, right=left_int+4, bottom=top_int+6)\n",
+    "    return box"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function to remove 5% bounding boxes and create 5% erroneous."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def erroneous_bounding_boxes(time_BB: List[str], number_BB: List[str]) -> Tuple[List[str], List[str]]:\n",
+    "    \"\"\"\n",
+    "    Create 5% erroneous bounding boxes by simultaneously removing and generating time and number BB.\n",
+    "\n",
+    "    Args:\n",
+    "        time_BB: list of time bounding boxes in BoundingBox format\n",
+    "        number_BB: list of number bounding boxes in BoundingBox format\n",
+    "\n",
+    "    Returns:\n",
+    "        Tuple: lists of time and number bounding boxes in BoundingBox format\n",
+    "    \"\"\"\n",
+    "    # make copies of input bounding box lists to avoid unwanted manipulation\n",
+    "    time_BB_copy = time_BB.copy()\n",
+    "    number_BB_copy = number_BB.copy()\n",
+    "    \n",
+    "    # subset and remove 5% of bounding boxes from time/number_bounding_boxes lists\n",
+    "    ## sample\n",
+    "    time_BB_sample = list(random.sample(time_BB_copy, 4))\n",
+    "    number_BB_sample = list(random.sample(number_BB_copy, 4))\n",
+    "    ## remove\n",
+    "    time_BB_removal = [time_BB_copy.remove(line) for line in time_BB_sample]\n",
+    "    number_BB_removal = [number_BB_copy.remove(line) for line in number_BB_sample]\n",
+    "\n",
+    "    # use random bounding box generation to refill removed BBs with erroneous boxes\n",
+    "    time_BB_generate = list(map(random_time_generate, range(len(time_BB_sample))))\n",
+    "    number_BB_generate = list(map(random_number_generate, range(len(number_BB_sample))))\n",
+    "\n",
+    "    # append BB generated list back to copy with 5% removal\n",
+    "    time_BB_erroneous = time_BB_copy + time_BB_generate\n",
+    "    number_BB_erroneous = number_BB_copy + number_BB_generate\n",
+    "\n",
+    "    return (time_BB_erroneous, number_BB_erroneous)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now lets use these functions to get the relevant bounding boxes for clustering.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -763,20 +851,43 @@
       "Sheet: RC_0019_intraoperative.JPG\n",
       "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n",
       "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Users\\\\15406\\\\Coding-Projects\\\\Paper Chart Extraction\\\\Supplements\\\\data\\\\agglomerative_clustered_images\\\\time\\\\RC_0001_intraoperative.JPG'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 133\u001b[0m\n\u001b[0;32m    124\u001b[0m                 json\u001b[38;5;241m.\u001b[39mdump(\n\u001b[0;32m    125\u001b[0m                     create_result_dictionary(\n\u001b[0;32m    126\u001b[0m                         number_labels, number_bounding_boxes, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmmHg\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    127\u001b[0m                     ),\n\u001b[0;32m    128\u001b[0m                     f,\n\u001b[0;32m    129\u001b[0m                 )\n\u001b[0;32m    132\u001b[0m \u001b[38;5;66;03m# Test the clustering methods\u001b[39;00m\n\u001b[1;32m--> 133\u001b[0m \u001b[43mtest_clustering_methods\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[8], line 72\u001b[0m, in \u001b[0;36mtest_clustering_methods\u001b[1;34m()\u001b[0m\n\u001b[0;32m     60\u001b[0m     draw\u001b[38;5;241m.\u001b[39mrectangle(\n\u001b[0;32m     61\u001b[0m         [\n\u001b[0;32m     62\u001b[0m             x_min,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     68\u001b[0m         width\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m,\n\u001b[0;32m     69\u001b[0m     )\n\u001b[0;32m     71\u001b[0m \u001b[38;5;66;03m# Save the image with the bounding boxes to the kmeans_clustered_images folder\u001b[39;00m\n\u001b[1;32m---> 72\u001b[0m \u001b[43mimage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../../data/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mmethod\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m_clustered_images/time/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43msheet\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;66;03m# Save the clustered bounding boxes to a JSON file\u001b[39;00m\n\u001b[0;32m     75\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\n\u001b[0;32m     76\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../data/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmethod\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_clustered_images/results/time/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msheet\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     77\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     78\u001b[0m ) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
-      "File \u001b[1;32mc:\\Users\\15406\\Coding-Projects\\Paper Chart Extraction\\Supplements\\.venv\\Lib\\site-packages\\PIL\\Image.py:2600\u001b[0m, in \u001b[0;36mImage.save\u001b[1;34m(self, fp, format, **params)\u001b[0m\n\u001b[0;32m   2598\u001b[0m         fp \u001b[38;5;241m=\u001b[39m builtins\u001b[38;5;241m.\u001b[39mopen(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr+b\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   2599\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 2600\u001b[0m         fp \u001b[38;5;241m=\u001b[39m \u001b[43mbuiltins\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mw+b\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2601\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   2602\u001b[0m     fp \u001b[38;5;241m=\u001b[39m cast(IO[\u001b[38;5;28mbytes\u001b[39m], fp)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Users\\\\15406\\\\Coding-Projects\\\\Paper Chart Extraction\\\\Supplements\\\\data\\\\agglomerative_clustered_images\\\\time\\\\RC_0001_intraoperative.JPG'"
+      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
+      "Sheet: RC_0002_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
+      "Sheet: RC_0003_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
+      "Sheet: RC_0004_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
+      "Sheet: RC_0005_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
+      "Sheet: RC_0006_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
+      "Sheet: RC_0007_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
+      "Sheet: RC_0008_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
+      "Sheet: RC_0009_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
+      "Sheet: RC_0010_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
+      "Sheet: RC_0011_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
+      "Sheet: RC_0012_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
+      "Sheet: RC_0013_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
+      "Sheet: RC_0014_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
+      "Sheet: RC_0015_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
+      "Sheet: RC_0016_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
+      "Sheet: RC_0017_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
+      "Sheet: RC_0018_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
+      "Sheet: RC_0019_intraoperative.JPG\n",
+      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n"
      ]
     }
    ],
@@ -799,6 +910,11 @@
     "            # Call the analyze_sheet function with data from the loop\n",
     "            time_bounding_boxes, number_bounding_boxes = select_relevant_bounding_boxes(\n",
     "                yolo_bbs, full_image_path\n",
+    "            )\n",
+    "\n",
+    "            # make erroneous bounding boxes -- simultaneously add and remove %5 of boxes\n",
+    "            time_bounding_boxes, number_bounding_boxes = erroneous_bounding_boxes(\n",
+    "                time_bounding_boxes, number_bounding_boxes\n",
     "            )\n",
     "\n",
     "            # Now we need to cluster the bounding boxes that pertain to the same multi-digit number\n",
@@ -927,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -935,14 +1051,14 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 797 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
-      "Number labels: 380 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
+      "Time labels: 652 correct clusters, 138 incorrect clusters. The accuracy is 82.53%\n",
+      "Number labels: 196 correct clusters, 179 incorrect clusters. The accuracy is 52.27%\n",
       "Method: dbscan\n",
-      "Time labels: 797 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
-      "Number labels: 380 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
+      "Time labels: 728 correct clusters, 136 incorrect clusters. The accuracy is 84.26%\n",
+      "Number labels: 308 correct clusters, 56 incorrect clusters. The accuracy is 84.62%\n",
       "Method: agglomerative\n",
-      "Time labels: 797 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n",
-      "Number labels: 380 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n"
+      "Time labels: 645 correct clusters, 149 incorrect clusters. The accuracy is 81.23%\n",
+      "Number labels: 185 correct clusters, 188 incorrect clusters. The accuracy is 49.60%\n"
      ]
     }
    ],
@@ -1095,7 +1211,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1109,7 +1225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
