--- a/experiments/clustering/clustering_erroneous.ipynb
+++ b/experiments/clustering/clustering_erroneous.ipynb
@@ -559,11 +559,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def random_BB_generate(x):\n",
-    "    # function paired with map to generate erroneous bounding boxes\n",
+    "def random_time_generate(x):\n",
+    "    # erroneous bounding boxes for time ROI\n",
     "    category_int = random.randint(0, 9)\n",
-    "    left_int = random.randint(20, 781)\n",
-    "    top_int = random.randint(20, 581)\n",
+    "    left_int = random.randint(105, 720)\n",
+    "\n",
+    "    # slope and random points ABOVE the line (but coordinates flipped)\n",
+    "    slope, intercept = 1/3, 225\n",
+    "    top_int = random.uniform(225, slope*left_int + intercept)\n",
+    "\n",
+    "    # input generated integers to bounding box \n",
+    "    box = BoundingBox(category=f'{category_int}', left=left_int, top=top_int, right=left_int+4, bottom=top_int+6)\n",
+    "    return box\n",
+    "\n",
+    "def random_number_generate(x):\n",
+    "    # erroneous bounding boxes for number ROI\n",
+    "    category_int = random.randint(0, 9)\n",
+    "    left_int = random.randint(105, 720)\n",
+    "    \n",
+    "    # slope and random points BELOW the line (but coordinates flipped)\n",
+    "    slope, intercept = 1/3, 225\n",
+    "    top_int = random.uniform(slope*left_int + intercept, 430)\n",
     "\n",
     "    # input generated integers to bounding box \n",
     "    box = BoundingBox(category=f'{category_int}', left=left_int, top=top_int, right=left_int+4, bottom=top_int+6)\n",
@@ -607,8 +623,8 @@
     "    number_BB_removal = [number_BB_copy.remove(line) for line in number_BB_sample]\n",
     "\n",
     "    # use random bounding box generation to refill removed BBs with erroneous boxes\n",
-    "    time_BB_generate = list(map(random_BB_generate, range(len(time_BB_sample))))\n",
-    "    number_BB_generate = list(map(random_BB_generate, range(len(number_BB_sample))))\n",
+    "    time_BB_generate = list(map(random_time_generate, range(len(time_BB_sample))))\n",
+    "    number_BB_generate = list(map(random_number_generate, range(len(number_BB_sample))))\n",
     "\n",
     "    # append BB generated list back to copy with 5% removal\n",
     "    time_BB_erroneous = time_BB_copy + time_BB_generate\n",
@@ -910,14 +926,14 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 645 correct clusters, 144 incorrect clusters. The accuracy is 81.75%\n",
-      "Number labels: 189 correct clusters, 187 incorrect clusters. The accuracy is 50.27%\n",
+      "Time labels: 657 correct clusters, 138 incorrect clusters. The accuracy is 82.64%\n",
+      "Number labels: 190 correct clusters, 181 incorrect clusters. The accuracy is 51.21%\n",
       "Method: dbscan\n",
-      "Time labels: 730 correct clusters, 132 incorrect clusters. The accuracy is 84.69%\n",
-      "Number labels: 310 correct clusters, 53 incorrect clusters. The accuracy is 85.40%\n",
+      "Time labels: 728 correct clusters, 129 incorrect clusters. The accuracy is 84.95%\n",
+      "Number labels: 307 correct clusters, 55 incorrect clusters. The accuracy is 84.81%\n",
       "Method: agglomerative\n",
-      "Time labels: 634 correct clusters, 158 incorrect clusters. The accuracy is 80.05%\n",
-      "Number labels: 186 correct clusters, 190 incorrect clusters. The accuracy is 49.47%\n"
+      "Time labels: 645 correct clusters, 152 incorrect clusters. The accuracy is 80.93%\n",
+      "Number labels: 177 correct clusters, 195 incorrect clusters. The accuracy is 47.58%\n"
      ]
     }
    ],
